--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 numpy>=1.23
 pandas>=1.5
-scipy>=1.10
 matplotlib>=3.7
 seaborn>=0.12
+scipy>=1.11.0
+seaborn>=0.12.0  # Optional, for better visualizations
+statsmodels>=0.14.0  # Optional, for advanced statistics
